--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 # title appears in the header
 title: IPIU 2019 - Vision-based localization 
 # description and keywords for meta tags
-description: "Create an OER workshop website quick and easy!"
+description: "IPIU tuto webiste"
 keywords: "workshops, OER, Open Education, websites, gh-pages, jekyll"
 
 # author settings for cc-by, appears in the footer
